# node-sidh

./: CMakeLists.txt  README.md  binding.gyp  binding.old  gccBuild  node-sidh  package-lock.json  package.json  sidh.cc  sidh.exp  tsconfig.json  wsl-code.cmd
include/: P751.lib  P751_compressed.lib  node-sidh.d.ts  node-sidh.node  node-sidh.node.d.ts  node-sike.d.ts  node-sike.node  sha3.d.ts
lib/: index.d.ts  index.js  index.js.map  node-sha3.node  node-sidh.d.ts  node-sidh.node  node-sidh.old  node-sike.d.ts  node-sike.node  sha3.d.ts
readmeHeader/: readhead.md
script/: clean.js  move.js
sidh/: CMakeLists.txt
sike/: CMakeLists.txt
src/: CMakeLists.txt  index.ts  sha3.cc  sha3.h  sidh.cc  sidh.h  sike.cc  sike.h  sike.hold  test.js
test/: KEM_test.js  sha3_test.js  sidh_test.js  sike_test.js  test.js
